finished basic CRUD for hospital/patient/med

--- a/app/views/patients/_new.html.haml
+++ b/app/views/patients/_new.html.haml
@@ -5,5 +5,7 @@
 %br
 %input.symptoms{type: "text", placeholder: "Symptoms"}
 %br
+%input.dob{type: "date"}
+%br
 %br
 %button.create-patient Create Patient
