--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,10 +2,18 @@
 %html
   %head
     %title Hospital2
-    = stylesheet_link_tag    'application', media: 'all'
-    = javascript_include_tag 'application'
-    = csrf_meta_tags
+    %meta{:charset => "utf-8"}
+      %meta{:content => "IE=edge", "http-equiv" => "X-UA-Compatible"}
+        %meta{:content => "width=device-width, initial-scale=1", :name => "viewport"}
+        = javascript_include_tag 'application'
+        = stylesheet_link_tag    'application', media: 'all'
+        = csrf_meta_tags
   %body
     = render 'layouts/navbar'
-    %div.content
-      = yield
+    .container
+      .row
+        .col-md-3
+          %div.content
+            = render 'layouts/sidebar'
+        .col-md-9
+          = yield
