added a little bit of style

--- a/app/views/hospitals/_sidebar.html.haml
+++ b/app/views/hospitals/_sidebar.html.haml
@@ -1,1 +1,2 @@
-= link_to "New hospital", new_hospital_path, remote: true
+.btn.btn-default
+  = link_to "New hospital", new_hospital_path, remote: true
