--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,8 @@
-// Place all the styles related to the home controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.col-md-3 {
+  left: 0;
+  background-color: blue;
+}
+.btn-default {
+  text-align: center;
+  display: block;
+}
