--- a/app/views/hospitals/index.html.haml
+++ b/app/views/hospitals/index.html.haml
@@ -1,3 +1,5 @@
+.btn.btn-info#slide
+  %span.glyphicon.glyphicon-th-list
 %h3 List of hospitals
 = form_tag hospitals_path, method: :get, class: "form-search", role: "search" do
   .input-group
