--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,8 @@
         = stylesheet_link_tag    'application', media: 'all'
         = csrf_meta_tags
   %body
-    = render 'layouts/navbar'
+    .background
+      = image_tag "hospital.jpg"
     .container
       .row
         .col-md-3
