small form changes

--- a/app/views/hospitals/_new.html.haml
+++ b/app/views/hospitals/_new.html.haml
@@ -1,8 +1,9 @@
-%br
-%input.name{type: "text", placeholder: "Name"}
-%br
-%input.location{type: "text", placeholder: "Location"}
-%br
-%br
-%button.create-hospital Create Hospital
-%button.escape Cancel
+.form
+  %br
+  %input.name{type: "text", placeholder: "Name"}
+  %br
+  %input.location{type: "text", placeholder: "Location"}
+  %br
+  %br
+  %button.create-hospital Create Hospital
+  %button.escape Cancel
