--- a/app/views/meds/_new.html.haml
+++ b/app/views/meds/_new.html.haml
@@ -1,8 +1,9 @@
-%br
-%input.name{type: "text", placeholder: "Name"}
-%br
-%input.direction{type: "text", placeholder: "Direction"}
-%br
-%br
-%button.create-med Create Med
-%button.escape Cancel
+.form
+  %br
+  %input.name{type: "text", placeholder: "Name"}
+  %br
+  %input.direction{type: "text", placeholder: "Direction"}
+  %br
+  %br
+  %button.create-med Create Med
+  %button.escape Cancel
