--- a/app/views/patients/_new.html.haml
+++ b/app/views/patients/_new.html.haml
@@ -1,11 +1,16 @@
-%input.firstName{type: "text", placeholder: "First Name"}
-%br
-%input.lastName{type: "text", placeholder: "Last Name"}
-%br
-%input.symptoms{type: "text", placeholder: "Symptoms"}
-%br
-%input.dob{type: "date"}
-%br
-%br
-%button.create-patient Create Patient
-%button.escape Cancel
+.form
+  %input.firstName{type: "text", placeholder: "First Name"}
+  %br
+  %input.lastName{type: "text", placeholder: "Last Name"}
+  %br
+  %input.dob{type: "date"}
+  %br
+  %input.symptoms{type: "text", placeholder: "Symptoms"}
+  %br
+  %input.gender{type: "text", placeholder: "gender"}
+  %br
+  %input.bloodtype{type: "text", placeholder: "bloodtype"}
+  %br
+  %br
+  %button.create-patient Create Patient
+  %button.escape Cancel
