changed index page buttons

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -13,6 +13,10 @@
   text-align: center;
   display: block;
 }
+.btn.btn-primary {
+  background-color: #A9B7AA;
+  color: black;
+}
 .background {
   position: fixed;
   z-index: 1;
