--- a/app/views/hospitals/_sidebar.html.haml
+++ b/app/views/hospitals/_sidebar.html.haml
@@ -1,2 +1,3 @@
 .btn.btn-default
-  = link_to "New hospital", new_hospital_path, remote: true
+  = link_to new_hospital_path, remote: true do
+    .spl New Hospital
