--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -1,9 +1,9 @@
 .btn.btn-default
   = link_to root_path do
-    Home
+    .spl Home
 %br
 .btn.btn-default
   = link_to hospitals_path do
-    Hospitals
+    .spl Hospitals
 %br
 = render 'sidebar'
